# RustApi

./: Cargo.toml  README.md  Rocket.toml
src/: MongoRepository.rs  User.rs  common.rs  lib.rs  main.rs  mongo_repository.rs
src/cats/: mod.rs  repository.rs
src/entities/: login.rs  user.rs
