[package]
name = "RustApi"
version = "0.1.0"
authors = ["MRamiro <marcramiro@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = "1.0.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-mongodb = "*"
rocket = "0.4"
rocket_codegen = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"


[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"


