[package]
name = "rust_api"
version = "0.1.0"
authors = ["MRamiro <marcramiro@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", feature = ["derive"]}
serde_json = "1.0"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]


